refactor: 시설 생성 시 고정 오픈시간, 오픈요일 세팅값을 받는다.
- 오픈시간은 겹칠 수 없다.
- 오픈요일은 중복될 수 없다.

Related: #7